# STING-CE

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  DATABASE_INIT.sql  DEVELOPER_PREVIEW_SUMMARY.md  DOCUMENTATION_SUMMARY.md  Dockerfile.minimal-worker  Dockerfile.utils  HOSTNAME_FIX_SUMMARY.md  LICENSE  QUICK_START.md  README.md  SCRIPTS_REVIEW.md  SECURITY.md  STRUCTURE.txt  TAILSCALE-SETUP.md  VERSION  bootstrap.sh  check-wsl-blockers.ps1  docker-compose.dev.yml  docker-compose.yml  install_sting.sh  manage_sting.sh  manage_sting_dev.sh  pyproject.toml  setup-tailscale-now.sh  tailscale-auth.template  tailscale-codespace.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
STING/: .dockerbuildkit  .dockerignore  CREDITS.md  Dockerfile.config  Dockerfile.init  Dockerfile.minimal-worker  Dockerfile.nectar-worker  Dockerfile.profile-sync-worker  Dockerfile.qe-bee-worker  Dockerfile.utils  INSTALL.md  LICENSE-THIRD-PARTY.md  README.md  UPGRADE.md  buildkitd.toml  clear_frontend_cache.sh  config.toml  docker-compose.dev-mac.yml  docker-compose.frontend-nginx.yml  docker-compose.full.yml  docker-compose.yml  docker-compose.yml.backup_20251102_010532  fix_cookie_name.sh  fix_honey_jar_triggers.py  fix_msting_permissions.sh  fix_permissions.sh  fix_ubuntu_ip_access.sh  fix_vault_tokens.sh  fix_wsl2_network.sh  install_sting.sh  list_honey_jars.py  manage_sting.sh  models  monitor_bee_chat.sh  nginx-llm-proxy.conf  quick_admin_fix.sh  quick_fix_ip_manual.sh  rebuild-frontend.sh  (+15 more)
(+1617 files in other folders)
